fixes add to card width on mobile

--- a/client/src/components/Molecules/BreadcrumbBar/BreadcrumbBar.scss
+++ b/client/src/components/Molecules/BreadcrumbBar/BreadcrumbBar.scss
@@ -48,3 +48,7 @@
         }
     }
 }
+
+.cartLabel {
+    width: fit-content;
+}
